--- a/projects/ngx-bit/src/lib/plugins/i18n-switch/i18n-switch.component.html
+++ b/projects/ngx-bit/src/lib/plugins/i18n-switch/i18n-switch.component.html
@@ -1,4 +1,6 @@
-<nz-radio-group [(ngModel)]="_i18n" [nzSize]="'small'">
+<nz-radio-group [(ngModel)]="i18n"
+                (ngModelChange)="change($event)"
+                [nzSize]="'small'">
   <label *ngFor="let x of switch" nz-radio-button [nzValue]="x.i18n">
     <span><b>{{x.name[bit.locale]}}</b></span>
   </label>
