--- a/src/app/pages/curd-originlists/curd-originlists.component.html
+++ b/src/app/pages/curd-originlists/curd-originlists.component.html
@@ -1,3 +1,3 @@
-<nz-card nzTitle="">
+<nz-card nzTitle="获取列表数据请求">
   <markdown [src]="'/assets/docs/curd/originListsService.md'"></markdown>
 </nz-card>
