--- a/src/app/pages/operate-factorylocales/operate-factorylocales.component.html
+++ b/src/app/pages/operate-factorylocales/operate-factorylocales.component.html
@@ -1,3 +1,3 @@
-<nz-card nzTitle="">
+<nz-card nzTitle="语言包生产">
   <markdown [src]="'/assets/docs/operate/factoryLocales.md'"></markdown>
 </nz-card>
