--- a/src/app/pages/operate-i18ncontrolsvalue/operate-i18ncontrolsvalue.component.html
+++ b/src/app/pages/operate-i18ncontrolsvalue/operate-i18ncontrolsvalue.component.html
@@ -1,3 +1,3 @@
-<nz-card nzTitle="">
+<nz-card nzTitle="多语言组件初始值">
   <markdown [src]="'/assets/docs/operate/i18nControlsValue.md'"></markdown>
 </nz-card>
