--- a/src/app/pages/component-language/component-language.component.html
+++ b/src/app/pages/component-language/component-language.component.html
@@ -1,3 +1,3 @@
-<nz-card nzTitle="">
+<nz-card nzTitle="在子模块下建立语言包需要以下步骤">
   <markdown [src]="'/assets/docs/component/language.md'"></markdown>
 </nz-card>
