--- a/src/app/pages/component-table/component-table.component.html
+++ b/src/app/pages/component-table/component-table.component.html
@@ -1,3 +1,3 @@
-<nz-card nzTitle="">
+<nz-card nzTitle="生成一个通用的分页表格只需要将通用属性赋值进模版即可">
   <markdown [src]="'/assets/docs/component/table.md'"></markdown>
 </nz-card>
