--- a/src/app/pages/component-i18n/component-i18n.component.html
+++ b/src/app/pages/component-i18n/component-i18n.component.html
@@ -1,3 +1,3 @@
-<nz-card nzTitle="">
+<nz-card nzTitle="在表单中存在多语言字段输入需要以下步骤">
   <markdown [src]="'/assets/docs/component/i18n.md'"></markdown>
 </nz-card>
