--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,3 +1,3 @@
-<nz-card nzTitle="开始使用">
+<nz-card nzTitle="基于 Angular 的辅助框架">
   <markdown [src]="'/assets/docs/README.md'"></markdown>
 </nz-card>
