--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
-<!-- NG-ZORRO -->
-<a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank" style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
-  <img height="300" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
-</a>
+<form nz-form [formGroup]="form" bit-form (bitSubmit)="submit($event)">
+  <nz-form-item>
+    <nz-form-label bitFormLabelCol>E-mail</nz-form-label>
+    <nz-form-control bitFormControlCol>
+      <input nz-input type="email" formControlName="email" [bitSearch]="'index-index'">
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item nz-row style="margin-bottom:8px;">
+    <nz-form-control [bitFormControlCol]="'submit'">
+      <button nz-button nzType="primary">执行</button>
+    </nz-form-control>
+  </nz-form-item>
+</form>
