--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<form nz-form [formGroup]="form" bit-form (bitSubmit)="submit($event)">
+<form nz-form [formGroup]="form" (bitSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-label bitFormLabelCol>E-mail</nz-form-label>
     <nz-form-control bitFormControlCol>
