--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,18 @@
-<form nz-form [formGroup]="form" (bitSubmit)="submit($event)">
+<form nz-form [formGroup]="form">
   <nz-form-item>
-    <nz-form-label bitFormLabelCol>E-mail</nz-form-label>
-    <nz-form-control bitFormControlCol>
-      <input nz-input type="email" formControlName="email" [bitSearch]="'index-index'">
+    <nz-form-label [nzSm]="6" [nzXs]="24">E-mail</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="email" formControlName="email">
     </nz-form-control>
+    <bit-form-explain [name]="'email'"
+                      [form]="form"
+                      [explain]="[
+                        {required:'请填写电子邮件'}
+                      ]">
+    </bit-form-explain>
   </nz-form-item>
   <nz-form-item nz-row style="margin-bottom:8px;">
-    <nz-form-control [bitFormControlCol]="'submit'">
+    <nz-form-control [nzSpan]="14" [nzOffset]="6">
       <button nz-button nzType="primary">执行</button>
     </nz-form-control>
   </nz-form-item>
