--- a/projects/ngx-bit/src/lib/component/bit-form-explain/bit-form-explain.component.scss
+++ b/projects/ngx-bit/src/lib/component/bit-form-explain/bit-form-explain.component.scss
@@ -1,3 +1,7 @@
-.bit-nz-form-explain {
-  margin-bottom: -20px;
+//.bit-nz-form-explain {
+//  margin-bottom: -20px;
+//}
+
+bit-form-explain {
+  position: absolute;
 }
