--- a/projects/ngx-bit/src/lib/component/bit-form-explain/bit-form-explain.component.html
+++ b/projects/ngx-bit/src/lib/component/bit-form-explain/bit-form-explain.component.html
@@ -1,7 +1,10 @@
-<nz-form-explain class="bit-nz-form-explain" *ngIf="formExplainError()">
-  <ng-container *ngFor="let x of explain">
-    <ng-container *ngIf="form.get(name).hasError(x[0])">
-      {{x[1]}}
+<ng-template #NzFormExplain>
+  <ng-content select="span"></ng-content>
+  <nz-form-explain *ngIf="formExplainError()">
+    <ng-container *ngFor="let x of explain">
+      <ng-container *ngIf="form.get(name).hasError(x[0])">
+        {{x[1]}}
+      </ng-container>
     </ng-container>
-  </ng-container>
-</nz-form-explain>
+  </nz-form-explain>
+</ng-template>
