--- a/projects/ngx-bit/src/lib/component/bit-i18n-switch/bit-i18n-switch.component.html
+++ b/projects/ngx-bit/src/lib/component/bit-i18n-switch/bit-i18n-switch.component.html
@@ -1,7 +1,7 @@
-<nz-radio-group [(ngModel)]="i18n"
+<nz-radio-group [(ngModel)]="bit.i18n"
                 (ngModelChange)="change($event)"
                 [nzSize]="'small'">
-  <label *ngFor="let x of switch" nz-radio-button [nzValue]="x.i18n">
+  <label *ngFor="let x of config.i18nSwitch" nz-radio-button [nzValue]="x.i18n">
     <span><b>{{x.name[bit.locale]}}</b></span>
   </label>
 </nz-radio-group>
