--- a/src/app/pages/admin-add/admin-add.component.html
+++ b/src/app/pages/admin-add/admin-add.component.html
@@ -1,5 +1,4 @@
-<nz-page-header nzBackIcon (nzBack)="bit.back()" [nzTitle]="bit.support.title|Locale:bit.locale">
-</nz-page-header>
+<bit-header back></bit-header>
 
 <nz-card>
   <form nz-form [formGroup]="form" (bitFormSubmit)="submit($event)">
@@ -13,7 +12,7 @@
         [nzValidatingTip]="bit.l['validating']"
         [nzErrorTip]="username.ref"
       >
-        <input nz-input formControlName="username" [placeholder]="bit.l['usernamePlaceholder']"/>
+        <input nz-input formControlName="username" [placeholder]="bit.l['usernamePlaceholder']" />
         <bit-error-tip #username [hasError]="{
           required:bit.l['usernameRequire'],
           minlength:bit.l['usernameCorrectly'],
@@ -98,7 +97,7 @@
         {{bit.l['call']}}
       </nz-form-label>
       <nz-form-control bitCol="control" nzHasFeedback>
-        <input nz-input formControlName="call" [placeholder]="bit.l['callPlaceholder']"/>
+        <input nz-input formControlName="call" [placeholder]="bit.l['callPlaceholder']" />
       </nz-form-control>
     </nz-form-item>
 
@@ -109,7 +108,7 @@
       <nz-form-control bitCol="control"
                        nzHasFeedback
                        [nzErrorTip]="email.ref">
-        <input nz-input formControlName="email" [placeholder]="bit.l['emailPlaceholder']"/>
+        <input nz-input formControlName="email" [placeholder]="bit.l['emailPlaceholder']" />
         <bit-error-tip #email [hasError]="{
           email:bit.l['emailCorrectly']
         }"></bit-error-tip>
@@ -121,7 +120,7 @@
         {{bit.l['phone']}}
       </nz-form-label>
       <nz-form-control bitCol="control" nzHasFeedback>
-        <input nz-input formControlName="phone" [placeholder]="bit.l['phonePlaceholder']"/>
+        <input nz-input formControlName="phone" [placeholder]="bit.l['phonePlaceholder']" />
       </nz-form-control>
     </nz-form-item>
 
