--- a/src/app/pages/admin-edit/admin-edit.component.html
+++ b/src/app/pages/admin-edit/admin-edit.component.html
@@ -1,5 +1,4 @@
-<nz-page-header nzBackIcon (nzBack)="bit.back()" [nzTitle]="bit.support.title|Locale:bit.locale">
-</nz-page-header>
+<bit-header back></bit-header>
 
 <nz-card>
   <form nz-form [formGroup]="form" (bitFormSubmit)="submit($event)">
@@ -8,7 +7,7 @@
         {{bit.l['username']}}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <input nz-input [readonly]="true" [value]="username"/>
+        <input nz-input [readonly]="true" [value]="username" />
       </nz-form-control>
     </nz-form-item>
 
@@ -85,7 +84,7 @@
         {{bit.l['call']}}
       </nz-form-label>
       <nz-form-control bitCol="control" nzHasFeedback>
-        <input nz-input formControlName="call" [placeholder]="bit.l['callPlaceholder']"/>
+        <input nz-input formControlName="call" [placeholder]="bit.l['callPlaceholder']" />
       </nz-form-control>
     </nz-form-item>
 
@@ -96,7 +95,7 @@
       <nz-form-control bitCol="control"
                        nzHasFeedback
                        [nzErrorTip]="email.ref">
-        <input nz-input formControlName="email" [placeholder]="bit.l['emailPlaceholder']"/>
+        <input nz-input formControlName="email" [placeholder]="bit.l['emailPlaceholder']" />
         <bit-error-tip #email [hasError]="{
           email:bit.l['emailCorrectly']
         }"></bit-error-tip>
@@ -108,7 +107,7 @@
         {{bit.l['phone']}}
       </nz-form-label>
       <nz-form-control bitCol="control" nzHasFeedback>
-        <input nz-input formControlName="phone" [placeholder]="bit.l['phonePlaceholder']"/>
+        <input nz-input formControlName="phone" [placeholder]="bit.l['phonePlaceholder']" />
       </nz-form-control>
     </nz-form-item>
 
