--- a/src/app/dashboards/dashboards.component.scss
+++ b/src/app/dashboards/dashboards.component.scss
@@ -1,40 +1,51 @@
-.logo {
-  width: 120px;
-  height: 31px;
-  line-height: 31px;
-  margin: 16px 28px 16px 0;
-  float: left;
-  color: #fff;
-  font-weight: bold;
-  font-size: 18px;
-}
+:host ::ng-deep {
+  .trigger {
+    font-size: 18px;
+    line-height: 64px;
+    padding: 0 24px;
+    cursor: pointer;
+    transition: color .3s;
 
-.header-menu {
-  float: right;
-  line-height: 64px;
-}
+    &:hover {
+      color: #1890ff;
+    }
+  }
 
-nz-layout.dashboard-layout {
-  height: 100%;
-}
+  .logo {
+    height: 64px;
+    line-height: 64px;
+    font-size: 16px;
+    white-space: nowrap;
+    color: #fff;
+    padding-left: 22px;
+    background: #002140;
+    overflow: hidden;
 
-nz-sider.main-sider {
-  background: #fff;
+    img {
+      width: 32px;
+      height: 32px;
+    }
 
-  ul {
-    height: 100%
+    nz-divider {
+      opacity: 0.6;
+      margin: 0 12px;
+    }
   }
 }
 
-nz-layout.app-warpper {
-  padding: 0 15px;
+nz-layout {
+  &.dashboard-layout {
+    height: 100%;
+  }
 }
 
-nz-breadcrumb.app-breadcrumb {
-  margin: 16px 0;
-}
+nz-content {
+  .app-breadcrumb {
+    background-color: #fff;
+    padding: 16px 24px;
+  }
 
-nz-content.app-content {
-  min-height: 280px;
+  .app-warpper {
+    padding: 15px 12px;
+  }
 }
-
