--- a/src/app/pages/acl-add/acl-add.component.html
+++ b/src/app/pages/acl-add/acl-add.component.html
@@ -1,8 +1,6 @@
-<nz-page-header nzBackIcon (nzBack)="bit.back()" [nzTitle]="bit.support.title|Locale:bit.locale">
-  <nz-page-header-extra>
-    <bit-i18n-switch></bit-i18n-switch>
-  </nz-page-header-extra>
-</nz-page-header>
+<bit-header back>
+  <bit-i18n-switch></bit-i18n-switch>
+</bit-header>
 
 <nz-card>
   <form nz-form [formGroup]="form" (bitFormSubmit)="submit($event)">
@@ -17,18 +15,19 @@
              nzTheme="outline">
           </i>
         </span>
-
       </nz-form-label>
       <ng-container *ngFor="let x of bit.i18nContain">
-        <nz-form-control *ngIf="bit.equalI18n(x)"
-                         nzHasFeedback
-                         bitCol="control"
-                         [nzValidatingTip]="bit.l['validating']"
-                         [nzErrorTip]="name.ref">
+        <nz-form-control
+          *ngIf="bit.equalI18n(x)"
+          nzHasFeedback
+          bitCol="control"
+          [nzValidatingTip]="bit.l['validating']"
+          [nzErrorTip]="name.ref"
+        >
           <input nz-input
                  [nz-tooltip]="tooltip.ref"
                  [formControlName]="x"
-                 [placeholder]="bit.l['namePlaceholder']"/>
+                 [placeholder]="bit.l['namePlaceholder']" />
           <bit-i18n-tooltip #tooltip groupName="name"></bit-i18n-tooltip>
           <bit-error-tip #name [hasError]="{
             required:bit.l['nameRequire'],
@@ -55,7 +54,7 @@
                        [nzErrorTip]="key.ref">
         <input nz-input
                formControlName="key"
-               [placeholder]="bit.l['keyPlaceholder']"/>
+               [placeholder]="bit.l['keyPlaceholder']" />
         <bit-error-tip #key [hasError]="{
           required:bit.l['keyRequire'],
           duplicated:bit.l['keyDuplicated']
