--- a/src/app/pages/role-add/role-add.component.html
+++ b/src/app/pages/role-add/role-add.component.html
@@ -1,8 +1,6 @@
-<nz-page-header nzBackIcon (nzBack)="bit.back()" [nzTitle]="bit.support.title|Locale:bit.locale">
-  <nz-page-header-extra>
-    <bit-i18n-switch></bit-i18n-switch>
-  </nz-page-header-extra>
-</nz-page-header>
+<bit-header back>
+  <bit-i18n-switch></bit-i18n-switch>
+</bit-header>
 
 <nz-card>
   <form nz-form [formGroup]="form" (bitFormSubmit)="submit($event)">
@@ -42,7 +40,7 @@
                        [nzErrorTip]="key.ref">
         <input nz-input
                formControlName="key"
-               [placeholder]="bit.l['keyPlaceholder']"/>
+               [placeholder]="bit.l['keyPlaceholder']" />
         <bit-error-tip #key [hasError]="{
           required:bit.l['keyRequire'],
           duplicated:bit.l['keyDuplicated']
