--- a/src/app/pages/role-index/role-index.component.html
+++ b/src/app/pages/role-index/role-index.component.html
@@ -1,12 +1,9 @@
-<nz-page-header [nzTitle]="bit.support.title|Locale:bit.locale">
-  <nz-page-header-extra>
-    <button nz-button nzType="primary" [bitOpen]="['role-add']">
-      <span>{{bit.l['add']}}</span>
-    </button>
-  </nz-page-header-extra>
-</nz-page-header>
-
-<nz-card>
+<bit-header>
+  <button nz-button nzType="primary" [bitOpen]="['role-add']">
+    <span>{{bit.l['add']}}</span>
+  </button>
+</bit-header>
+<ng-template #title>
   <nz-space>
     <nz-space-item *ngIf="lists.hasSearch('name->'+bit.locale)">
       <nz-input-group nzSearch [nzAddOnAfter]="nzAddOnAfter" style="width: 320px">
@@ -56,9 +53,9 @@
       </button>
     </nz-space-item>
   </nz-space>
+</ng-template>
 
-  <nz-divider [nzDashed]="true"></nz-divider>
-
+<nz-card [nzTitle]="title">
   <nz-table
     #table
     [nzData]="lists.data"
@@ -72,10 +69,12 @@
   >
     <thead>
     <tr>
-      <th nzShowCheckbox nzWidth="65px"
-          [(nzChecked)]="lists.checked"
-          [nzIndeterminate]="lists.indeterminate"
-          (nzCheckedChange)="lists.checkedAll($event)"></th>
+      <th
+        nzShowCheckbox nzWidth="65px"
+        [(nzChecked)]="lists.checked"
+        [nzIndeterminate]="lists.indeterminate"
+        (nzCheckedChange)="lists.checkedAll($event)"
+      ></th>
       <th nzWidth="300px">{{bit.l['name']}}</th>
       <th nzWidth="300px">{{bit.l['key']}}</th>
       <th>{{bit.l['status']}}</th>
@@ -139,13 +138,15 @@
 
       <nz-divider [nzDashed]="true"></nz-divider>
 
-      <nz-tree #nzTree
-               [nzBlockNode]="true"
-               [nzShowLine]="true"
-               [nzShowIcon]="true"
-               [nzExpandAll]="true"
-               [nzData]="nodes"
-               nzCheckable>
+      <nz-tree
+        #nzTree
+        [nzBlockNode]="true"
+        [nzShowLine]="true"
+        [nzShowIcon]="true"
+        [nzExpandAll]="true"
+        [nzData]="nodes"
+        nzCheckable
+      >
       </nz-tree>
     </form>
   </ng-container>
