更新选择器限定

--- a/src/app/pages/acl-index/acl-index.component.html
+++ b/src/app/pages/acl-index/acl-index.component.html
@@ -1,94 +1,94 @@
 <bit-header>
-  <button nz-button nzType="primary" [bitOpen]="['acl-add']">
+  <button nz-button nzType='primary' [bitOpen]="['acl-add']">
     <span>{{bit.l['add']}}</span>
   </button>
 </bit-header>
 <ng-template #title>
   <nz-space>
     <nz-space-item *ngIf="lists.hasSearch('name->'+bit.locale)">
-      <nz-input-group nzSearch [nzAddOnAfter]="nzAddOnAfter" style="width: 320px">
+      <nz-input-group nzSearch [nzAddOnAfter]='nzAddOnAfter' style='width: 320px'>
         <input
           nz-input
-          [bitSearchStart]="lists"
+          [bitSearchStart]='lists'
           [placeholder]="bit.l['search']"
           [(ngModel)]="lists.search['name->'+bit.locale].value"
-          (after)="getLists(true)"
+          (after)='getLists(true)'
         >
       </nz-input-group>
       <ng-template #nzAddOnAfter>
         <button
           nz-button
-          nzType="primary"
+          nzType='primary'
           nzSearch
-          [bitSearchStart]="lists"
-          (after)="getLists(true)"
+          [bitSearchStart]='lists'
+          (after)='getLists(true)'
         >
-          <i nz-icon nzType="search"></i>
+          <i nz-icon nzType='search'></i>
         </button>
       </ng-template>
     </nz-space-item>
     <nz-space-item>
-      <button nz-button nzType="default" (click)="getLists(true)">
-        <i nz-icon nzType="sync"></i> {{bit.l['refreshLists']}}
+      <button nz-button nzType='default' (click)='getLists(true)'>
+        <i nz-icon nzType='sync'></i> {{bit.l['refreshLists']}}
       </button>
     </nz-space-item>
     <nz-space-item>
       <button
         nz-button
-        nzType="default"
-        [bitSearchClear]="lists"
-        (after)="getLists(true)"
+        nzType='default'
+        [bitSearchClear]='lists'
+        (after)='getLists(true)'
       >
-        <i nz-icon nzType="clear"></i> {{bit.l['clearSearch']}}
+        <i nz-icon nzType='clear'></i> {{bit.l['clearSearch']}}
       </button>
     </nz-space-item>
     <nz-space-item>
       <button
         nz-button
-        nzType="danger"
-        [disabled]="!lists.batch"
-        (click)="deleteCheckData()"
+        nzType='danger'
+        [disabled]='!lists.batch'
+        (click)='deleteCheckData()'
       >
-        <i nz-icon nzType="rest"></i> {{bit.l['bulkDelete']}}
+        <i nz-icon nzType='rest'></i> {{bit.l['bulkDelete']}}
       </button>
     </nz-space-item>
   </nz-space>
 </ng-template>
-<nz-card [nzTitle]="title" [nzBordered]="false">
+<nz-card [nzTitle]='title' [nzBordered]='false'>
   <nz-table
     #table
-    [nzData]="lists.data"
-    [nzLoading]="lists.loading"
-    [nzTotal]="lists.totals"
-    [nzPageSize]="lists.limit"
-    [nzFrontPagination]="false"
-    [(nzPageIndex)]="lists.index"
-    (nzPageIndexChange)="getLists(false,$event)"
-    nzSize="middle"
+    [nzData]='lists.data'
+    [nzLoading]='lists.loading'
+    [nzTotal]='lists.totals'
+    [nzPageSize]='lists.limit'
+    [nzFrontPagination]='false'
+    [(nzPageIndex)]='lists.index'
+    (nzPageIndexChange)='getLists(false,$event)'
+    nzSize='middle'
   >
     <thead>
     <tr>
       <th
-        nzShowCheckbox nzWidth="65px"
-        [(nzChecked)]="lists.checked"
-        [nzIndeterminate]="lists.indeterminate"
-        (nzCheckedChange)="lists.checkedAll($event)"
+        nzShowCheckbox nzWidth='65px'
+        [(nzChecked)]='lists.checked'
+        [nzIndeterminate]='lists.indeterminate'
+        (nzCheckedChange)='lists.checkedAll($event)'
       >
       </th>
-      <th nzWidth="200px">{{bit.l['name']}}</th>
-      <th nzWidth="200px">{{bit.l['key']}}</th>
-      <th nzWidth="300px">{{bit.l['write']}}</th>
-      <th nzWidth="300px">{{bit.l['read']}}</th>
+      <th nzWidth='200px'>{{bit.l['name']}}</th>
+      <th nzWidth='200px'>{{bit.l['key']}}</th>
+      <th nzWidth='300px'>{{bit.l['write']}}</th>
+      <th nzWidth='300px'>{{bit.l['read']}}</th>
       <th>{{bit.l['status']}}</th>
-      <th nzWidth="300px" nzRight="0px">{{bit.l['action']}}</th>
+      <th nzWidth='300px' nzRight='0px'>{{bit.l['action']}}</th>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let data of table.data">
+    <tr *ngFor='let data of table.data'>
       <td
         nzShowCheckbox
-        [(nzChecked)]="data.checked"
-        (nzCheckedChange)="lists.refreshStatus()"
+        [(nzChecked)]='data.checked'
+        (nzCheckedChange)='lists.refreshStatus()'
       ></td>
       <td>{{data.name|Locale:bit.locale}}</td>
       <td>{{data.key}}</td>
@@ -96,20 +96,20 @@
       <td>{{data.read}}</td>
       <td>
         <nz-switch
-          [(ngModel)]="data.status"
+          [(ngModel)]='data.status'
           [nzCheckedChildren]="bit.l['on']"
           [nzUnCheckedChildren]="bit.l['off']"
-          [bitStatusChange]="aclService.status(data)"
+          [bitStatusChange]='aclService.status(data)'
         >
         </nz-switch>
       </td>
       <td>
         <a [bitOpen]="['acl-edit',data.id]">
-          <i nz-icon nzType="edit"></i>  {{bit.l['edit']}}
+          <i nz-icon nzType='edit'></i>  {{bit.l['edit']}}
         </a>
-        <nz-divider nzType="vertical"></nz-divider>
-        <a (click)="deleteData([data.id])">
-          <i nz-icon nzType="delete"></i> {{bit.l['delete']}}
+        <nz-divider nzType='vertical'></nz-divider>
+        <a (click)='deleteData([data.id])'>
+          <i nz-icon nzType='delete'></i> {{bit.l['delete']}}
         </a>
       </td>
     </tr>
